k8s/overlays/fastapi1/oauth2-proxy-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  selector:
    matchLabels:
      app: fastapi1-oauth2-proxy
  template:
    metadata:
      labels:
        app: fastapi1-oauth2-proxy
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy-service
spec:
  selector:
    app: fastapi1-oauth2-proxy
