k8s/overlays/fastapi1/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-route
spec:
  rules:
  - matches:
    - path: { type: PathPrefix, value: /oauth2/ }
    backendRefs:
    - name: fastapi1-oauth2-proxy-service
      port: 4180
  - matches:
    - path: { type: PathPrefix, value: / }
    backendRefs:
    - name: fastapi1-oauth2-proxy-service
      port: 4180
